<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="titulo">Calcule seu IMC</string>
    <string name="subtitulo">Informe seu peso e sua altura</string>
    <string name="peso">Peso (kg)</string>
    <string name="altura">Altura (m)</string>
    <string name="exemplo_altura">Exemplo: 1,75</string>
    <string name="calcular">Calcular</string>
    <string name="erro_peso">Informe um peso válido</string>
    <string name="erro_altura">Informe uma altura válida</string>
    <string name="titulo_resultado">Seu resultado</string>
    <string name="imc_resultado">IMC: %1$s</string>
    <string name="classificacao">Classificação: %1$s</string>
    <string name="abaixo_do_peso">Abaixo do peso</string>
    <string name="peso_ideal">Peso ideal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidade">Obesidade</string>
    <string name="nova_consulta">Calcular novamente</string>
</resources>
